--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Pengolahan Citra</title>
+  <title>Pengolahan Citra - Image manipulation</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -13,7 +13,7 @@
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Pengolahan Citra</a>
+    <a class="navbar-brand" href="#">Pengolahan Citra - Image manipulation</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,9 +28,9 @@
                 <div class="col-md-12">
                     <ul>
                         <li>LIST ANGGOTA :</li>
-                        <li>DONNY RAMDHANI - 0617103027</li>
+                        <li>DONNY RAMDHANI - 0617103014</li>
                         <li>FIKRI MUJADDID - 0617103027</li>
-                        <li>JAJANG M MIMBAR - 0617103027</li>
+                        <li>JAJANG M MIMBAR - 0617103043</li>
                     </ul>
                 </div>
                 <div class="col-md-5">
